--- a/papers/INDIN 2017/references.bib
+++ b/papers/INDIN 2017/references.bib
@@ -712,15 +712,14 @@ year = {2016}
   year = 2012
 }
 
-@article{Izenman1991,
- ISSN = {01621459},
- author = {Izenman, Alan Julian},
- journal = {Journal of the American Statistical Association},
- number = {413},
- pages = {205-224},
- publisher = {[American Statistical Association, Taylor & Francis, Ltd.]},
- title = {Recent Developments in Nonparametric Density Estimation},
- volume = {86},
- year = {1991}
-}
 
+@article{Hanebeck2003,
+author = {Hanebeck, Uwe D. and Briechle, Kai and Rauh, Andreas},
+title = {Progressive Bayes: a new framework for nonlinear state estimation},
+journal = {Proc. SPIE},
+volume = {5099},
+number = {},
+pages = {256-267},
+year = {2003},
+doi = {10.1117/12.487806},
+}
